# hash-sig-serde

./: Cargo.toml
src/signature/: generalized_xmss.rs
src/signature/generalized_xmss/: instantiations_poseidon.rs
src/symmetric/: message_hash.rs  tweak_hash.rs  tweak_hash_tree.rs
src/symmetric/message_hash/: poseidon.rs  sha.rs
src/symmetric/prf/: sha.rs  shake_to_field.rs
src/symmetric/tweak_hash/: poseidon.rs  sha.rs
