[package]
name = "hashsig"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
sha3 = "0.10.6"
num-bigint = "0.4.6"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"

[features]
slow-tests = []
with-gen-benches-sha = []
with-gen-benches-poseidon = []

[[bench]]
name = "benchmark"
harness = false

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha3 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha3-v0.10.6" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }