[package]
name = "hashsig"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
# sha3 = "0.10.6"
tiny-keccak = { version = "2.0", features = ["sha3"] }
num-bigint = "0.4.6"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"

[features]
slow-tests = []
with-gen-benches-sha = []
with-gen-benches-poseidon = []

[[bench]]
name = "benchmark"
harness = false
